<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="mixpanel_token">39010526a8a7b33b797a01958fb8f7fe</string>

    <string name="img_content">ico</string>
	<!-- WARNING DIALOG -->	
    <string name="dialog_warning_title">WARNING</string>
    <string name="dialog_warning_description">An image has too low of resolution and may look pixelated or blurry in print form.</string>
    
    <!-- INTRO PAGE -->
    <string name="intro_page_one">Delivered straight to your door.</string>
    <string name="intro_page_two">Bursting with color.</string>
    <string name="intro_page_three">Premium photo prints.</string>
    <string name="intro_page_four">Thick, quality paper.</string>
    <string name="intro_page_start">START</string>
    
    <!-- ORDER SUMMARY PAGE -->
    <string name="dialog_change">Change It</string>
    <string name="dialog_continue">Continue</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    
    <!-- NAV BAR TITLES -->
    <string name="nav_next_title_intro">CONTINUE</string>
    <string name="nav_next_title_select">NEXT</string>
    <string name="nav_next_title_cart">CHECKOUT</string>
    <string name="nav_next_title_login">NEXT</string>
    <string name="nav_next_title_login_reset">RESET</string>
    <string name="nav_next_title_shipping">SAVE</string>
    <string name="nav_next_title_edit_shipping">DONE</string>
    <string name="nav_next_title_purchase">CHECKOUT</string>
    <string name="nav_next_title_preview">CHECKOUT</string>
    
    <!-- CART PAGE -->
    <string name="cart_empty">Your print cart is empty..\nPlease go back to add an image</string>
    <string name="cart_subtotal">Subtotal</string>
    <string name="cart_add_to_cart">Add to cart</string>
    <string name="cart_update_in_cart">Update in cart</string>
    <string name="cart_remove_from_cart">Remove</string>
    <string name="cart_add_more_image">Add more images from</string>
    <string name="cart_checkout">CHECKOUT</string>
    
    <!-- SHIPPING LIST PAGE -->
    <string name="shipping_title">Choose where to ship your prints:</string>
    <string name="shipping_add_title">Add shipping address</string>
    <string name="shipping_edit">EDIT</string>
    
    <!-- SHIPPING EDIT PAGE -->
    <string name="shipping_import">IMPORT</string>
    <string name="shipping_hint_name">Name</string>
    <string name="shipping_hint_street">Street</string>
    <string name="shipping_hint_city">City</string>
    <string name="shipping_hint_state">State</string>
    <string name="shipping_hint_zip">Zip</string>
    
    <!-- ORDER SUMMARY PAGE -->
    <string name="order_summary_title">Order summary</string>
    <string name="order_summary_edit">EDIT</string>
    <string name="order_summary_no_coupon">Enter coupon code here</string>
    <string name="order_summary_apply">APPLY</string>
    <string name="order_summary_subtotal">Subtotal</string>
    <string name="order_summary_shipping_header">Shipping</string>
    <string name="order_summary_shipping">Shipping to</string>
    <string name="order_summary_coupon_header">Coupons</string>
    <string name="order_summary_credits">Credits applied</string>
    <string name="order_summary_total">Total</string>
    <string name="order_summary_blank_total">$0</string>
    <string name="order_summary_payment">Payment</string>
    <string name="order_summary_card">Card</string>
    <string name="order_summary_complete">COMPLETE ORDER</string>
    <string name="order_summary_type_lineitem">lineitem</string>
    <string name="order_summary_type_shipping">shipping</string>
    <string name="order_summary_type_subtotal">subtotal</string>
    <string name="order_summary_type_credit">credit</string>
    <string name="order_summary_type_coupon">coupon</string>
    
    <!-- CARD EDIT PAGE -->
    <string name="card_edit_title">Enter your credit card below:</string>
    <string name="card_edit_name_hint">Cardholder\'s Name</string>
    <string name="card_edit_number_hint">Credit Card Number</string>
    <string name="card_edit_code_hint">Security Code</string>
    <string name="card_edit_monthyear">Exp Date MMYY</string>
    
    <string name="card_edit_err_blank">Make sure to fill out all fields</string>
    <string name="card_edit_err_card_number">Unfortunately, that credit card number is invalid. Please double check it.</string>
    <string name="card_edit_err_card_exp">Unfortunately, that expiration date is invalid. Please double check it.</string>
    <string name="card_edit_err_card_declined">Unfortunately, your card was declined. Please double check it.</string>
    
    <!-- ORDER COMPLETE PAGE -->
    <string name="order_complete_title">Your order is on the way! Kindred sent the order confirmation to:</string>
    <string name="order_complete_support_email">For questions or concerns with your order, please email customer support at support@kindredprints.com</string>
    <string name="order_powered_by">Powered by</string>
    <string name="order_done_before">Click done to return to</string>
    <string name="order_done">DONE</string>
    
    <!-- LOGIN PAGE -->
    <string name="login_title">We need your email address for:</string>
    <string name="login_title_order_conf">- Order confirmations</string>
    <string name="login_title_shipment_conf">- Shipment notifications</string>
    <string name="login_title_customer_support">- Customer support</string>
    <string name="login_title_more">Please enter it below, so we can tell you about your order!</string>
    <string name="login_title_password">Looks like you already have a Kindred Prints account!</string>
    <string name="login_title_password_more">Please enter your password to access your saved addresses.</string>
    <string name="login_hint_email">Your email address</string>
    <string name="login_hint_password">Your password</string>
     
    <!-- ERROR MESSAGES -->
    <string name="err_login_email_blank">Please enter an email</string>
    <string name="err_login_email_invalid">Please enter a valid email</string>
    <string name="err_login_password_blank">Please enter a password</string>
    <string name="err_login_password_wrong">That password was incorrect, please click Reset button above to send a reset link.</string>
    <string name="err_login_password_short">Passwords must be > 6 characters</string>
    <string name="err_login_reset_done">Check email for reset link</string>
    <string name="err_login_unknown">Unknown server error. Sorry!</string>
    
</resources>
