<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/order_summary_row_height"  >
    
    <Button 
        android:id="@+id/cmdEditShipping"
        android:layout_width="@dimen/order_summary_edit_width"
        android:layout_height="@dimen/order_summary_edit_height"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/order_summary_blank_row_height"
       	android:textSize="@dimen/order_summary_text_size"
        android:text="@string/order_summary_edit"
        android:background="@drawable/cmd_rounded_button"
        />
    
    <TextView
        android:id="@+id/txtShippingDescription"
       	android:layout_width="wrap_content"
       	android:layout_height="match_parent"
		android:layout_toLeftOf="@+id/txtShippingTotal"
		android:layout_marginRight="@dimen/order_summary_padding"
        android:gravity="right|center_vertical"
        android:textSize="@dimen/order_summary_text_size" 
        android:text="@string/order_summary_shipping"
    />

    
    <TextView
        android:id="@+id/txtShippingTotal"
       	android:layout_width="@dimen/order_summary_amount_width"
       	android:layout_height="match_parent"
       	android:layout_alignParentRight="true"
        android:gravity="center"
        android:textSize="@dimen/order_summary_text_size" 
        android:text="@string/order_summary_blank_total"
    />
    
</RelativeLayout>
