<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <Button 
        android:id="@+id/cmdImport"
        android:layout_width="@dimen/shipping_edit_import_width"
        android:layout_height="@dimen/shipping_edit_import_height"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/shipping_edit_vertical_margin"
        android:layout_marginRight="@dimen/shipping_edit_side_margin"
       	android:textSize="@dimen/shipping_edit_text_size"
        android:text="@string/shipping_import"
        android:background="@drawable/cmd_rounded_button"
        />
    
    <EditText
	    android:id="@+id/editTextName"
	    android:layout_width="match_parent"
        android:layout_height="@dimen/shipping_edit_row_height"
        android:layout_below="@+id/cmdImport"
        android:layout_marginTop="@dimen/shipping_edit_vertical_margin"
        android:layout_marginLeft="@dimen/shipping_edit_side_margin"
        android:layout_marginRight="@dimen/shipping_edit_side_margin"
        android:inputType="textCapWords"
        android:hint="@string/shipping_hint_name"
        android:textSize="@dimen/shipping_edit_text_size"
        android:gravity="center_vertical"
        android:nextFocusDown="@+id/editTextStreet"
	    />
    
    <View
        android:id="@+id/viewDiv0"
	    android:layout_width="match_parent"
        android:layout_height="@dimen/shipping_edit_divider_height"
	    android:layout_below="@+id/editTextName"
        android:layout_marginLeft="@dimen/shipping_edit_side_margin"
        android:layout_marginRight="@dimen/shipping_edit_side_margin"
	/>
    
    <EditText
	    android:id="@+id/editTextStreet"
	    android:layout_width="match_parent"
        android:layout_height="@dimen/shipping_edit_row_height"
        android:layout_below="@+id/viewDiv0"
        android:layout_marginLeft="@dimen/shipping_edit_side_margin"
        android:layout_marginRight="@dimen/shipping_edit_side_margin"
        android:inputType="textCapWords"
        android:hint="@string/shipping_hint_street"
        android:textSize="@dimen/shipping_edit_text_size"
        android:gravity="center_vertical"
        android:nextFocusDown="@+id/editTextCity"
	    />
    
   	<View
        android:id="@+id/viewDiv1"
	    android:layout_width="match_parent"
        android:layout_height="@dimen/shipping_edit_divider_height"
	    android:layout_below="@+id/editTextStreet"
        android:layout_marginLeft="@dimen/shipping_edit_side_margin"
        android:layout_marginRight="@dimen/shipping_edit_side_margin"
	/> 
    <EditText
	    android:id="@+id/editTextCity"
	    android:layout_width="match_parent"
        android:layout_height="@dimen/shipping_edit_row_height"
        android:layout_below="@+id/viewDiv1"
        android:layout_marginLeft="@dimen/shipping_edit_side_margin"
        android:layout_marginRight="@dimen/shipping_edit_side_margin"
        android:inputType="textCapWords"
        android:hint="@string/shipping_hint_city"
        android:textSize="@dimen/shipping_edit_text_size"
        android:gravity="center_vertical"
        android:nextFocusDown="@+id/editTextState"
	    />
    <View
        android:id="@+id/viewDiv2"
	    android:layout_width="match_parent"
        android:layout_height="@dimen/shipping_edit_divider_height"
	    android:layout_below="@+id/editTextCity"
        android:layout_marginLeft="@dimen/shipping_edit_side_margin"
        android:layout_marginRight="@dimen/shipping_edit_side_margin"
	/> 
	
    <EditText
	    android:id="@+id/editTextState"
	    android:layout_width="match_parent"
        android:layout_height="@dimen/shipping_edit_row_height"
        android:layout_below="@+id/viewDiv2"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/invisDivider0"
        android:layout_marginLeft="@dimen/shipping_edit_side_margin"
        android:inputType="textCapCharacters"
        android:hint="@string/shipping_hint_state"
        android:textSize="@dimen/shipping_edit_text_size"
        android:gravity="center_vertical"
        android:nextFocusRight="@+id/editTextZip"
        android:imeOptions="actionNext"
	    />
    
    <View
        android:id="@+id/invisDivider0"
	    android:layout_width="0dp"
        android:layout_height="@dimen/shipping_edit_row_height"
        android:layout_below="@+id/viewDiv2"
	    android:layout_centerHorizontal="true"
	/>
   	<EditText
	    android:id="@+id/editTextZip"
	    android:layout_width="match_parent"
        android:layout_height="@dimen/shipping_edit_row_height"
        android:layout_below="@+id/viewDiv2"
        android:layout_toRightOf="@+id/invisDivider0"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="@dimen/shipping_edit_side_margin"
        android:inputType="textCapCharacters"
        android:hint="@string/shipping_hint_zip"
        android:textSize="@dimen/shipping_edit_text_size"
        android:gravity="center_vertical"
	    />
    <View
        android:id="@+id/viewDiv3"
	    android:layout_width="match_parent"
        android:layout_height="@dimen/shipping_edit_divider_height"
	    android:layout_below="@+id/editTextState"
        android:layout_marginLeft="@dimen/shipping_edit_side_margin"
        android:layout_marginRight="@dimen/shipping_edit_side_margin"
	/> 
	<View
        android:id="@+id/invisDivider1"
	    android:layout_width="0dp"
        android:layout_height="@dimen/shipping_edit_row_height"
        android:layout_below="@+id/viewDiv3"
	    android:layout_centerHorizontal="true"
	/>
    <Spinner
        android:id="@+id/spinCountry"
       	android:layout_width="match_parent"
        android:layout_height="@dimen/shipping_edit_row_height"
        android:layout_below="@+id/viewDiv3"
        android:layout_toRightOf="@+id/invisDivider1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/shipping_edit_side_margin" />
    
	<TextView
        android:id="@+id/txtError"
       	android:layout_width="match_parent"
       	android:layout_height="wrap_content"
       	android:layout_below="@+id/spinCountry"
        android:layout_marginTop="@dimen/shipping_edit_vertical_margin"
        android:layout_marginLeft="@dimen/shipping_edit_side_margin"
        android:layout_marginRight="@dimen/shipping_edit_side_margin"
        android:paddingRight="@dimen/shipping_edit_side_margin"
        android:paddingLeft="@dimen/shipping_edit_side_margin"
        android:gravity="center"
        android:textSize="@dimen/shipping_edit_text_size" 
    />
</RelativeLayout>
